--- a/Aqua_park.html
+++ b/Aqua_park.html
@@ -50,7 +50,9 @@
                          <h2 class="text-white fw-bold m-0">SubMarina</h2>
                     </a>
                     <div class="ms-auto d-flex align-items-center">
-                         <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                         <small class="ms-4" id="locationLink"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi
+                              boulevard, Makkah</small>
+
                          <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
                          <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                          <div class="ms-3 d-flex">
@@ -83,7 +85,7 @@
                               <a href="index.html" class="nav-item nav-link active fw-bolder ">SubMarina</a>
                               <a href="Indoor_ski_dome.html" class="nav-item nav-link">Indoor ski dome</a>
                               <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
-                              <a href="Playground.html" class="nav-item nav-link">Playground</a>
+                              <a href="Playground.html" class="nav-item nav-link">Play ground Amusement</a>
                               <a href="Teleferik.html" class="nav-item nav-link">Teleferik</a>
                               <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
                               <a href="Aqua_park.html" class="nav-item nav-link">Aqua park</a>
@@ -107,32 +109,31 @@
 
 
 
-     <!-- Ice Hotel and semi Ice Hotel Start -->
+     <!-- Aqua Park Start -->
      <div class="container-xxl pt-5">
           <div class="container">
                <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                    <p class="fs-1 pb-2  fw-bold  text-dark ">Aqua Park</p>
+                    <p class="fs-1 pb-2  fw-bold  text-dark ">Aqua Park (water Slides)</p>
                </div>
                <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
                     <div class="project-item mb-5">
                          <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/Aqua-park/BaliParasailing-KlookSingapore.jpg"
-                                   alt="">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/aque-park-1.jpg" alt="">
                               <div class="project-overlay">
                                    <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                        href="img/Sectores/Aqua-park/BaliParasailing-KlookSingapore.jpg"
-                                        data-lightbox="project"><i class="fa fa-eye"></i></a>
+                                        href="img/Sectores/Aqua-park/aque-park-1.jpg" data-lightbox="project"><i
+                                             class="fa fa-eye"></i></a>
                               </div>
                          </div>
                     </div>
 
                     <div class="project-item mb-5">
                          <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/skiDome/ice-hotel.jpg" alt="">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/aque-park-2.jpg" alt="">
                               <div class="project-overlay">
                                    <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                        href="img/Sectores/skiDome/ice-hotel.jpg" data-lightbox="project"><i
+                                        href="img/Sectores/Aqua-park/aque-park-2.jpg" data-lightbox="project"><i
                                              class="fa fa-eye"></i></a>
                               </div>
                          </div>
@@ -140,10 +141,10 @@
                     <!-- ! VIdeos  -->
                     <div class="project-item mb-5">
                          <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/skiDome/ice-hotel-2.webp" alt="">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/aque-park-3.jpg" alt="">
                               <div class="project-overlay">
                                    <button type="button" class="btn-play" data-bs-toggle="modal"
-                                        data-src="https://www.youtube.com/embed/28eL2GiCuRo"
+                                        data-src="https://www.youtube.com/embed/6ULHWF8XAyc"
                                         data-bs-target="#customVideoModal">
                                         <span></span>
                                    </button>
@@ -154,25 +155,11 @@
 
                     <div class="project-item mb-5">
                          <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/skiDome/ice-hotel-2I.webp" alt="">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/aque-park-4.jpg" alt="">
                               <div class="project-overlay">
                                    <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                        href="img/Sectores/skiDome/ice-hotel-2I.webp" data-lightbox="project"><i
+                                        href="img/Sectores/Aqua-park/aque-park-4.jpg" data-lightbox="project"><i
                                              class="fa fa-eye"></i></a>
-                              </div>
-                         </div>
-                    </div>
-
-                    <!-- ! VIdeos  -->
-                    <div class="project-item mb-5">
-                         <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/skiDome/ice-hotel-2.webp" alt="">
-                              <div class="project-overlay">
-                                   <button type="button" class="btn-play" data-bs-toggle="modal"
-                                        data-src="https://www.youtube.com/embed/28eL2GiCuRo"
-                                        data-bs-target="#customVideoModal">
-                                        <span></span>
-                                   </button>
                               </div>
                          </div>
                     </div>
@@ -180,7 +167,7 @@
                </div>
           </div>
      </div>
-     <!-- Ice Hotel and semi Ice Hotel End -->
+     <!-- Aqua Park End -->
 
 
 
@@ -248,6 +235,63 @@
 
 
 
+     <!-- Aquarium Start -->
+     <div class="container-xxl pt-5">
+          <div class="container">
+               <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
+                    <p class="fs-1 pb-2  fw-bold  text-dark ">Aquarium</p>
+                    <p class="fs-4 pb-2  fw-medium text-primary ">Submarina can construct,operate & develop Aquarium/p>
+               </div>
+               <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
+
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/Aquarium-2.webp" alt="">
+                              <div class="project-overlay">
+                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                        href="img/Sectores/Aqua-park/Aquarium-2.webp" data-lightbox="project"><i
+                                             class="fa fa-eye"></i></a>
+                              </div>
+                         </div>
+                    </div>
+
+
+
+                    <!-- ! VIdeos  -->
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/Aquarium-1.jpg" alt="">
+                              <div class="project-overlay">
+                                   <button type="button" class="btn-play" data-bs-toggle="modal"
+                                        data-src="https://www.youtube.com/embed/ny4rVmMi8Zc"
+                                        data-bs-target="#customVideoModal">
+                                        <span></span>
+                                   </button>
+                              </div>
+                         </div>
+                    </div>
+
+
+                    <!-- ! VIdeos  -->
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Aqua-park/Aquarium-3.jpg" alt="">
+                              <div class="project-overlay">
+                                   <button type="button" class="btn-play" data-bs-toggle="modal"
+                                        data-src="https://www.youtube.com/embed/6SFMlLdYHEI"
+                                        data-bs-target="#customVideoModal">
+                                        <span></span>
+                                   </button>
+                              </div>
+                         </div>
+                    </div>
+
+               </div>
+          </div>
+     </div>
+     <!-- Aquarium End -->
+
+
 
 
 
@@ -272,14 +316,14 @@
      </div>
      <!-- Custom Video Modal End -->
 
-
      <!-- Footer Start -->
      <div class="container-fluid bg-dark footer mt-5 py-2 wow fadeIn" data-wow-delay="0.1s">
           <div class="container py-5">
                <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                          <h4 class="text-white mb-4">Our Office</h4>
-                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                         <p id="locationLink" class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi
+                              boulevard,Makkah </p>
                          <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
                          <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                          <div class="d-flex pt-3">
@@ -293,30 +337,21 @@
                                         class="fab fa-linkedin-in"></i></a>
                          </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-4 col-md-6">
                          <h4 class="text-white mb-4">Quick Links</h4>
                          <a href="index.html" class="btn btn-link">SubMarina</a>
                          <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
                          <a href="Submarines.html" class="btn btn-link">Submarines</a>
-                         <a href="Playground.html" class="btn btn-link">Playground</a>
+                         <a href="Playground.html" class="btn btn-link">Play ground Amusement </a>
                          <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
                          <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
                          <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
                          <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                     </div>
 
-                    <div class="col-lg-3 col-md-6">
-                         <h4 class="text-white mb-4">Business Hours</h4>
-                         <p class="mb-1">Monday - Friday</p>
-                         <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                         <p class="mb-1">Saturday</p>
-                         <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                         <p class="mb-1">Sunday</p>
-                         <h6 class="text-light">Closed</h6>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-4 col-md-6">
                          <h4 class="text-white mb-4">Newsletter</h4>
-                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                         <p>Subscribe to our newsletter for the latest updates and promotions</p>
                          <div class="position-relative w-100">
                               <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
                                    placeholder="Your email">
