--- a/Playground.html
+++ b/Playground.html
@@ -51,7 +51,8 @@
                     <h2 class="text-white fw-bold m-0">SubMarina</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                    <small class="ms-4" id="locationLink"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi boulevard,
+                        Makkah</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                     <div class="ms-3 d-flex">
@@ -102,7 +103,8 @@
     <!-- Page Header Start -->
     <div class="container-fluid playground-page-header page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-2  text-white mb-4 animated slideInDown">Playground</h1>
+            <h1 class="display-2  text-white mb-4 animated slideInDown">Play ground Amusement
+            </h1>
             <h2 class="text-white mb-4 playground-text">
                 Submarina is the exclusive agent for <a href="https://www.jinmarides.com/" target="_blank">Jinma
                     Rides</a> Company
@@ -137,7 +139,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                <p class="fs-1 pb-2  fw-medium text-dark ">Playground Amusement Images</p>
+                <p class="fs-1 pb-2  fw-medium text-dark ">Play ground Amusement </p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -231,7 +233,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                <p class="fs-1 pb-2  fw-medium text-dark ">Playground Amusement Videos</p>
+                <p class="fs-1 pb-2  fw-medium text-dark ">Play ground Amusement </p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -260,18 +262,6 @@
                     </div>
                 </div>
 
-
-                <div class="project-item mb-5">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Playground/playground-video-3.jpg" alt="">
-                        <div class="project-overlay">
-                            <button type="button" class="btn-play" data-bs-toggle="modal"
-                                data-src="www.youtube.com/embed/HoPQT3GfPlM" data-bs-target="#customVideoModal">
-                                <span></span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
                 <!-- End Videos -->
 
             </div>
@@ -376,6 +366,7 @@
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-1 pb-2  fw-medium text-dark ">Theme Park</p>
+                <p class="fs-4 pb-2  fw-medium text-primary  ">Indoor & Outdoor Theme Park</p>
 
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
@@ -460,6 +451,77 @@
         </div>
     </div>
     <!-- Theme Park End -->
+
+
+
+    <!-- Naveplast dri ski and toboggan  Start -->
+    <div class="container-xxl pt-5">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <p class="fs-1 pb-2  fw-medium text-dark ">Naveplast dri ski and toboggan</p>
+
+            </div>
+            <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
+
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Playground/neveplast-skistar-0.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Playground/neveplast-skistar-0.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- ! VIdeos  -->
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Playground/neveplast-skistar-01.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/lvMajngNclk" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Playground/neveplast-skistar-02.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Playground/neveplast-skistar-02.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- ! VIdeos  -->
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Playground/neveplast-skistar-5.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/6IcLAUcEUnc" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
+    </div>
+    <!-- Naveplast dri ski and toboggan  End -->
 
 
 
@@ -551,7 +613,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                    <p id="locationLink" class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi
+                        boulevard,Makkah </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                     <div class="d-flex pt-3">
@@ -565,30 +628,21 @@
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
                     <a href="index.html" class="btn btn-link">SubMarina</a>
                     <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
                     <a href="Submarines.html" class="btn btn-link">Submarines</a>
-                    <a href="Playground.html" class="btn btn-link">Playground</a>
+                    <a href="Playground.html" class="btn btn-link">Play ground Amusement </a>
                     <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
                     <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
                     <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
                     <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Business Hours</h4>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
-                </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Subscribe to our newsletter for the latest updates and promotions</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
                             placeholder="Your email">
@@ -600,7 +654,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i
