--- a/Teleferik.html
+++ b/Teleferik.html
@@ -49,7 +49,9 @@
                          <h2 class="text-white fw-bold m-0">SubMarina</h2>
                     </a>
                     <div class="ms-auto d-flex align-items-center">
-                         <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                         <small class="ms-4" id="locationLink"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi
+                              boulevard, Makkah</small>
+
                          <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
                          <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                          <div class="ms-3 d-flex">
@@ -83,7 +85,7 @@
                               <a href="index.html" class="nav-item nav-link active fw-bolder ">SubMarina</a>
                               <a href="Indoor_ski_dome.html" class="nav-item nav-link">Indoor ski dome</a>
                               <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
-                              <a href="Playground.html" class="nav-item nav-link">Playground</a>
+                              <a href="Playground.html" class="nav-item nav-link">Play ground Amusement</a>
                               <a href="Teleferik.html" class="nav-item nav-link">Teleferik</a>
                               <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
                               <a href="Aqua_park.html" class="nav-item nav-link">Aqua park</a>
@@ -107,33 +109,18 @@
 
 
 
-     <!-- Header Intro Start -->
+
+
+
+
+     <!-- Al-noor Start -->
      <div class="container-xxl pt-5">
           <div class="container">
-               <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 100%;">
-                    <h1 class=" display-6   mb-4 animated slideInRight">
-
-                         Jeddah Corniche Cable card (Teleferik)
-                    </h1>
-                    <h1 class=" display-6   mb-4 animated slideInRight">
-
-                         Al-Noor and Al-Thawr mountain Teleferik in Makkah
-                    </h1>
+               <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
+                    <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Al-Noor Mountain Cable car in Makkah
+                    </p>
                </div>
                <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
-               </div>
-          </div>
-     </div>
-     <!-- Header Intro End -->
-
-
-
-     <!-- Ice Cave Start -->
-     <div class="container-xxl pt-5">
-          <div class="container">
-               <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
-
-
                     <div class="project-item mb-5">
                          <div class="position-relative">
                               <img class="img-fluid" src="img/Sectores/Teleferic/Al-noor.jpg" alt="">
@@ -148,17 +135,49 @@
 
                     <div class="project-item mb-5">
                          <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/Teleferic/pic-tunektepe-teleferik-antalya-4.jpeg"
-                                   alt="">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Al-noor-2.jpg" alt="">
                               <div class="project-overlay">
                                    <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                        href="img/Sectores/Teleferic/pic-tunektepe-teleferik-antalya-4.jpeg"
-                                        data-lightbox="project"><i class="fa fa-eye"></i></a>
+                                        href="img/Sectores/Teleferic/Al-noor-2.jpg" data-lightbox="project"><i
+                                             class="fa fa-eye"></i></a>
                               </div>
                          </div>
                     </div>
 
 
+
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Al-noor-3.jpg" alt="">
+                              <div class="project-overlay">
+                                   <button type="button" class="btn-play" data-bs-toggle="modal"
+                                        data-src="https://www.youtube.com/embed/aF6KeBkzrE4"
+                                        data-bs-target="#customVideoModal">
+                                        <span></span>
+                                   </button>
+                              </div>
+                         </div>
+                    </div>
+
+
+
+
+               </div>
+          </div>
+     </div>
+     <!-- Al-noor End -->
+
+
+
+
+     <!-- Al-Thore Start -->
+     <div class="container-xxl pt-5">
+          <div class="container">
+               <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
+                    <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Al-Thawr Mountain Cable car in
+                         Makkah </p>
+               </div>
+               <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
                     <div class="project-item mb-5">
                          <div class="position-relative">
@@ -171,30 +190,6 @@
                          </div>
                     </div>
 
-
-                    <div class="project-item mb-5">
-                         <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/Teleferic/Teleferik,_Uludağ.jpg" alt="">
-                              <div class="project-overlay">
-                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                        href="img/Sectores/Teleferic/Teleferik,_Uludağ.jpg" data-lightbox="project"><i
-                                             class="fa fa-eye"></i></a>
-                              </div>
-                         </div>
-                    </div>
-
-
-
-                    <div class="project-item mb-5">
-                         <div class="position-relative">
-                              <img class="img-fluid" src="img/Sectores/Teleferic/Al-noor-2.jpg" alt="">
-                              <div class="project-overlay">
-                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                        href="img/Sectores/Teleferic/Al-noor-2.jpg" data-lightbox="project"><i
-                                             class="fa fa-eye"></i></a>
-                              </div>
-                         </div>
-                    </div>
 
                     <div class="project-item mb-5">
                          <div class="position-relative">
@@ -211,7 +206,58 @@
                </div>
           </div>
      </div>
-     <!-- Ice Cave End -->
+     <!-- Al-Thore End -->
+
+
+
+     <!-- Jeddah-Corniche-Cable Start -->
+     <div class="container-xxl pt-5">
+          <div class="container">
+               <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
+                    <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Jeddah Corniche Cable car
+                         (Teleferik) </p>
+               </div>
+               <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Jeddah-Corniche-Cable.jpg" alt="">
+                              <div class="project-overlay">
+                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                        href="img/Sectores/Teleferic/Jeddah-Corniche-Cable.jpg"
+                                        data-lightbox="project"><i class="fa fa-eye"></i></a>
+                              </div>
+                         </div>
+                    </div>
+
+
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Jeddah-Corniche-Cable-2.jpg" alt="">
+                              <div class="project-overlay">
+                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                        href="img/Sectores/Teleferic/Jeddah-Corniche-Cable-2.jpg"
+                                        data-lightbox="project"><i class="fa fa-eye"></i></a>
+                              </div>
+                         </div>
+                    </div>
+
+
+
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Jeddah-Corniche-Cable-3.jpg" alt="">
+                              <div class="project-overlay">
+                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                        href="img/Sectores/Teleferic/Jeddah-Corniche-Cable-3.jpg"
+                                        data-lightbox="project"><i class="fa fa-eye"></i></a>
+                              </div>
+                         </div>
+                    </div>
+
+               </div>
+          </div>
+     </div>
+     <!-- Jeddah-Corniche-Cable End -->
 
 
 
@@ -261,7 +307,7 @@
                                         <img class="img-fluid"
                                              src="img/Sectores/safari-zoo/icons/graph-presentation.png" alt="Icon">
                                    </div>
-                                   <h5 class="mb-3">Jeddah Corniche Cable card</h5>
+                                   <h5 class="mb-3">Jeddah Corniche Cable car</h5>
                               </div>
                               <div class="service-btn rounded-0 rounded-bottom">
                                    <a class="text-danger fw-medium"
@@ -284,7 +330,7 @@
                <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                          <h4 class="text-white mb-4">Our Office</h4>
-                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi boulevard,Makkah </p>
                          <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
                          <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                          <div class="d-flex pt-3">
@@ -303,7 +349,7 @@
                          <a href="index.html" class="btn btn-link">SubMarina</a>
                          <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
                          <a href="Submarines.html" class="btn btn-link">Submarines</a>
-                         <a href="Playground.html" class="btn btn-link">Playground</a>
+                         <a href="Playground.html" class="btn btn-link">Play ground Amusement</a>
                          <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
                          <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
                          <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
@@ -321,7 +367,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                          <h4 class="text-white mb-4">Newsletter</h4>
-                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                         <p>Subscribe to our newsletter for the latest updates and promotions</p>
                          <div class="position-relative w-100">
                               <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
                                    placeholder="Your email">
