--- a/Ferris_wheels.html
+++ b/Ferris_wheels.html
@@ -51,7 +51,8 @@
                     <h2 class="text-white fw-bold m-0">SubMarina</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                    <small class="ms-4" id="locationLink"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi boulevard,
+                        Makkah</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                     <div class="ms-3 d-flex">
@@ -84,7 +85,7 @@
                         <a href="index.html" class="nav-item nav-link active fw-bolder ">SubMarina</a>
                         <a href="Indoor_ski_dome.html" class="nav-item nav-link">Indoor ski dome</a>
                         <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
-                        <a href="Playground.html" class="nav-item nav-link">Playground</a>
+                        <a href="Playground.html" class="nav-item nav-link">Play ground Amusement</a>
                         <a href="Teleferik.html" class="nav-item nav-link">Teleferik</a>
                         <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
                         <a href="Aqua_park.html" class="nav-item nav-link">Aqua park</a>
@@ -117,7 +118,11 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                <p class="fs-5 fw-medium text-primary">Ferris wheels Gallery</p>
+                <p class="fs-5 fw-medium text-primary">its proposed that submarina will construct Riyadh & Jeddah Ferris
+                    Wheels after we
+                    agree with their municipality to find the active location for such this two project
+
+                </p>
                 <h1 class="display-5 mb-5">Explore Our Photos and Videos</h1>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
@@ -249,7 +254,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                    <p id="locationLink" class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi
+                        boulevard,Makkah </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                     <div class="d-flex pt-3">
@@ -263,30 +269,21 @@
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
                     <a href="index.html" class="btn btn-link">SubMarina</a>
                     <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
                     <a href="Submarines.html" class="btn btn-link">Submarines</a>
-                    <a href="Playground.html" class="btn btn-link">Playground</a>
+                    <a href="Playground.html" class="btn btn-link">Play ground Amusement </a>
                     <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
                     <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
                     <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
                     <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Business Hours</h4>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
-                </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Subscribe to our newsletter for the latest updates and promotions</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
                             placeholder="Your email">
@@ -298,7 +295,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i
