--- a/Submarines.html
+++ b/Submarines.html
@@ -51,7 +51,8 @@
                     <h2 class="text-white fw-bold m-0">SubMarina</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                    <small class="ms-4" id="locationLink"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi boulevard,
+                        Makkah</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                     <div class="ms-3 d-flex">
@@ -338,9 +339,10 @@
                     <div class="position-relative">
                         <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/sub-Catamaran-3.jpg" alt="">
                         <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/sub-Catamaran-3.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/p1SBTkjP_Q0" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -352,6 +354,69 @@
         </div>
     </div>
     <!-- sub Catamaran  End -->
+
+
+
+    <!-- glass boat Start -->
+    <div class="container-xxl pt-5">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Glass Boat </p>
+            </div>
+            <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-5.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/Xym3HmpS4l8" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- glass boat  End -->
 
 
 
@@ -433,69 +498,6 @@
 
 
 
-    <!-- glass boat Start -->
-    <div class="container-xxl pt-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Glass Boat </p>
-            </div>
-            <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
-
-                <div class="project-item mb-5" style="height: 500px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="project-item mb-5" style="height: 500px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-item mb-5" style="height: 500px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="project-item mb-5" style="height: 500px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-5.jpg" alt="">
-                        <div class="project-overlay">
-                            <button type="button" class="btn-play" data-bs-toggle="modal"
-                                data-src="https://www.youtube.com/embed/Xym3HmpS4l8" data-bs-target="#customVideoModal">
-                                <span></span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- glass boat  End -->
-
-
-
 
     <!-- Custom Video Modal Start -->
     <div class="modal modal-video fade" id="customVideoModal" tabindex="-1" aria-labelledby="customVideoLabel"
@@ -555,13 +557,15 @@
     <!-- Service End -->
 
 
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-2 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                    <p id="locationLink" class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Aljaroushi
+                        boulevard,Makkah </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                     <div class="d-flex pt-3">
@@ -575,30 +579,21 @@
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
                     <a href="index.html" class="btn btn-link">SubMarina</a>
                     <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
                     <a href="Submarines.html" class="btn btn-link">Submarines</a>
-                    <a href="Playground.html" class="btn btn-link">Playground</a>
+                    <a href="Playground.html" class="btn btn-link">Play ground Amusement </a>
                     <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
                     <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
                     <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
                     <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Business Hours</h4>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
-                </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Subscribe to our newsletter for the latest updates and promotions</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
                             placeholder="Your email">
@@ -610,7 +605,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i
